# mindMap

./: .env.example  .gitignore  cli.py  hooks.py  pyproject.toml  requirements.txt  run.py
backend/: hooks.py  run.py
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: agent.py  chat.py  graphs.py  markdown.py  nodes.py
backend/app/services/: agent_service.py  graph_service.py
backend/config/: agent.yaml  explore.yaml  filldocs.yaml
backend/config/prompts/: doc_writer_worker.md  explore_agent_system.md  filldocs_agent_system.md  mindmap_agent_system.md
backend/config/tool/: tool-mindmap-manager.yaml  tool-mindmap-renderer.yaml  tool-searching-serper.yaml
backend/tools/: mindmap_manager_server.py  mindmap_renderer_server.py  models.py
config/: agent.yaml
config/prompts/: mindmap_agent_system.md
config/skills/definitions/: knowledge_interconnection.md  mindmap_workflow.md
config/tool/: tool-mindmap-manager.yaml  tool-mindmap-renderer.yaml
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useOperation.ts
frontend/src/stores/: graphStore.ts
frontend/src/types/: index.ts
mobile/: .gitignore  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/api/: client.dart
mobile/lib/models/: graph.dart
mobile/lib/providers/: api_provider.dart
mobile/lib/screens/: agent_sheet.dart  graph_detail_screen.dart  graphs_screen.dart  node_detail_screen.dart  settings_screen.dart
tools/: mindmap_manager_server.py  mindmap_renderer_server.py  models.py
(+16 files in other folders)
