[project]
name = "mindmap-agent"
version = "1.0.2"
description = "AI-powered Knowledge MindMap Agent"
requires-python = ">=3.12"

dependencies = [
    "mem-deep-research>=1.0.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.25.0",
]

[project.scripts]
mindmap-server = "backend.app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
